# AERGS-SLAM

./: CMakeLists.txt  README.md
AirSLAM/: CMakeLists.txt
AirSLAM/atomic_configure/: .rosinstall  setup.sh
AirSLAM/catkin_generated/: generate_cached_setup.py  setup_cached.sh
AirSLAM/cmake/: FindG2O.cmake  FindG2O.cmake22
AirSLAM/devel/: .catkin  local_setup.sh
AirSLAM/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
AirSLAM/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
AirSLAM/gtest/googletest/: CTestTestfile.cmake  Makefile
AirSLAM/include/: camera.h  dataset.h  debug.h  feature_detector.h  frame.h  imu.h  light_glue.h  line_processor.h  map.h  map_builder.h  map_refiner.h  map_user.h  mapline.h  mappoint.h  plnet.h  point_matcher.h  read_configs.h  ros_publisher.h  super_glue.h  super_point.h  thread_publisher.h  timer.h  utils.h
AirSLAM/include/g2o_optimization/: g2o_optimization.h
AirSLAM/rviz/: relocalization.rviz  vo.rviz
AirSLAM/src/: camera.cc  dataset.cc  debug.cc  feature_detector.cc  frame.cc  imu.cc  light_glue.cpp  line_processor.cc  map.cc  map_builder.cc  map_refiner.cc  map_user.cc  mapline.cc  mappoint.cc  plnet.cpp  point_matcher.cc  ros_publisher.cc  super_glue.cpp  super_point.cpp  timer.cc  utils.cc
AirSLAM/src/g2o_optimization/: g2o_optimization.cc
configs/camera/: euroc.yaml  zed.yaml
configs/gaussian_splatting/: EuRoC.yaml
configs/relocalization/: reloc_zed.yaml
configs/visual_odometry/: vo_euroc.yaml  vo_zed.yaml
configs/visual_odometry/EuRoC_TimeStamps/: generate_exposure_factors.py
configs/visual_odometry/ex_factors/: MH_01_easy.txt  MH_02_easy.txt  MH_03_medium.txt  MH_04_difficult.txt  MH_05_difficult.txt  V1_01_easy.txt  V1_02_medium.txt  V1_03_difficult.txt  V2_01_easy.txt  V2_02_medium.txt  V2_03_difficult.txt
cuda_lanczos/: lanczos.cu  lanczos.h
cuda_rasterizer/: forward.cu  operate_points.h  stereo_vision.h
demo/: visual_odometry_dark.cpp  zed_ros.cpp
evaluate/: CRF_curve_eval.py  LPIPS_eval.py  trajectory_eval.py
evaluate/zed_data_evaluate/: LPIPS_eval_zed.py  trajectory_eval_zed.py  zed_evaluate_psnr_ssim.cpp
include/: FOVUndistorter.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_parameters.h  gaussian_rasterizer.h  gaussian_renderer.h  gaussian_reso_scheduler.h  gaussian_scene.h  gaussian_trainer.h  gaussian_view.h  general_utils.h  graphics_utils.h  loss_utils.h  operate_points.h  point2d.h  point3d.h  point_cloud.h  rasterize_points.h  response_mapper.h  sh_utils.h  ssim.h  stereo_vision.h  tensor_utils.h  types.h
src/: gaussian_keyframe.cpp  gaussian_mapper.cpp  gaussian_model.cpp  gaussian_parameters.cpp  gaussian_rasterizer.cpp  gaussian_renderer.cpp  gaussian_scene.cpp  gaussian_trainer.cpp  operate_points.cu  rasterize_points.cu  response_mapper.cpp  ssim.cu  stereo_vision.cu
